# News-Summarizer

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  config.py  config.yaml.example  logger.py  main.py  models.py  pipeline.py  pyproject.toml
fetchers/: base.py  email_fetcher.py  rss_fetcher.py
outputs/: database.py  discord_output.py
summarizer/: digest.py  embedder.py  grouper.py  llm_client.py  summarizer.py
tests/: conftest.py  test_config.py  test_database.py  test_digest.py  test_discord_output.py  test_llm_client.py  test_pipeline.py  test_rss_fetcher.py  test_run_options.py  test_summarizer.py
